--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,7 @@ html {
   -webkit-text-size-adjust: 100%;
   /* 2 */
   background-color: inherit;
+  font-family: 'Garamond Premr Pro', Fallback, sans-serif;
   font-weight: 100;
   font-size: 34px; }
 
@@ -35,7 +36,8 @@ body {
   margin: 0;
   min-height: 100%;
   overflow-x: hidden;
-  display: block; }
+  display: block;
+  background: #0c3520; }
   body * {
     font-weight: 100;
     margin: 0 auto;
@@ -505,6 +507,16 @@ input[type=number]::-webkit-outer-spin-button {
 [hidden] {
   display: none; }
 
+/* Fonts
+     ========================================================================== */
+@font-face {
+  font-family: 'Garamond Premr Pro';
+  src: url("../fonts/GaramondPremrPro-Capt.otf"); }
+
+@font-face {
+  font-family: 'Robinsons Gothic Regular';
+  src: url("../fonts/RobinsonsGothic2-Regular.otf"); }
+
 /* General
      ========================================================================== */
 h1 {
@@ -525,3 +537,99 @@ nav li {
 
 small, footer li {
   font-size: 0.353rem; }
+
+#wrapper {
+  background-color: #ffffff; }
+
+.row {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap; }
+
+.column {
+  flex-basis: 100%; }
+
+@media screen and (min-width: 800px) {
+  .column {
+    flex: 1; } }
+
+@media screen and (min-width: 800px) {
+  ._15 {
+    flex: 1.5; }
+  ._20 {
+    flex: 2; }
+  ._25 {
+    flex: 2.5; }
+  ._30 {
+    flex: 3.3; }
+  ._35 {
+    flex: 3.5; }
+  ._37 {
+    flex: 3.75; }
+  ._40 {
+    flex: 4; }
+  ._55 {
+    flex: 5.5; }
+  ._65 {
+    flex: 6.5; }
+  ._70 {
+    flex: 7; }
+  ._20 {
+    flex: 2; }
+  ._75 {
+    flex: 7.5; } }
+
+.inner-width {
+  width: calc(100% - 100px); }
+
+.row.center {
+  align-items: center;
+  text-align: center; }
+
+/* Header and Navigation
+      ========================================================================== */
+header {
+  font-size: 0.471rem;
+  padding: 2em 0;
+  border-bottom: 1px solid #000000; }
+
+nav ul {
+  font-family: 'Garamond Premr Pro';
+  display: flex;
+  letter-spacing: 2px; }
+  nav ul * {
+    margin: 0; }
+  nav ul .internal-links {
+    margin-right: 12px; }
+  nav ul .social-links {
+    margin-left: 12px; }
+
+#home-button {
+  margin-left: auto;
+  margin-right: auto; }
+
+/* Home
+         ========================================================================== */
+section.blockquote {
+  padding: 250px 0;
+  max-width: 800px; }
+
+section.square {
+  padding: 250px 0;
+  max-width: 600px; }
+  section.square h3 {
+    overflow: hidden;
+    text-align: justify;
+    -webkit-hyphens: auto;
+    -ms-hyphens: auto;
+    hyphens: auto;
+    -webkit-shape-inside: polygon(0px 0px, 0 300px, 300px 300px); }
+
+#logo {
+  min-height: calc(100vh - 2.44rem);
+  background-color: #0c3520; }
+  #logo h1 {
+    color: #ffffff;
+    font-family: 'Robinsons Gothic Regular';
+    font-size: 3.117rem;
+    letter-spacing: 0.206rem; }
