--- a/css/styles.scss
+++ b/css/styles.scss
@@ -56,12 +56,12 @@
       outline-color: rgba(0,0,0,0) !important;
     }
     ::selection {
-      background: #000000; /* WebKit/Blink Browsers */
+      background: #0c5324; /* WebKit/Blink Browsers */
       color: #ffffff;
       opacity: 1;
     }
     ::-moz-selection {
-      background: #000000;
+      background: #0c5324;
       color: #ffffff;
       opacity: 1;
     }
@@ -585,6 +585,11 @@
      }
 
      @font-face {
+       font-family: 'Garamond Premr Italic';
+       src: url('../fonts/GaramondPremrPro-ItCapt.otf');
+     }
+
+     @font-face {
        font-family: 'Robinsons Gothic Regular';
        src: url('../fonts/RobinsonsGothic2-Regular.otf');
      }
@@ -608,7 +613,7 @@
        font-size: 0.471rem;
        text-transform: uppercase;
      }
-     small, footer li  {
+     small, footer li, .small  {
        font-size: 0.353rem;
      }
 
@@ -676,6 +681,83 @@
         align-items: center;
         text-align: center;
       }
+      .img-padding {
+        img {
+          border: 2rem solid #ffffff;
+        }
+      }
+      .italic {
+        font-family: 'Garamond Premr Italic';
+      }
+
+      /* Product Grid
+         ========================================================================== */
+      .product-grid {
+        h2 {
+          text-align: center;
+        }
+        .row {
+          display: grid;
+          grid-template-columns: repeat(auto-fill, minmax(25%, 1fr));
+
+          @media only screen and (max-width: 800px) {
+              grid-template-columns: repeat(auto-fill, minmax(50%, 1fr));
+          }
+
+          .column {
+            padding: 0.25em;
+            padding-top: 50px;
+
+            .title {
+              text-align: center;
+              padding-bottom: 1em;
+            }
+            .description {
+              padding-bottom: 1em;
+            }
+            .small {
+              font-family: 'Robinsons Gothic Regular';
+              text-transform: uppercase;
+              text-align: center;
+              letter-spacing: 0.1em;
+            }
+          }
+        }
+      }
+
+      /* Blog Grid
+         ========================================================================== */
+
+      .blog-grid {
+
+        h2 {
+          text-align: center;
+        }
+        .row {
+          display: grid;
+          grid-template-columns: repeat(auto-fill, minmax(25%, 1fr));
+
+          @media only screen and (max-width: 800px) {
+              grid-template-columns: repeat(auto-fill, minmax(50%, 1fr));
+          }
+
+          .column {
+            padding: 0.25em;
+            padding-top: 50px;
+
+            .title {
+              text-transform: uppercase;
+              text-align: center;
+            }
+            .date {
+              text-align: center;
+              padding-bottom: 1em;
+            }
+          }
+        }
+      }
+
+
    /* Header and Navigation
       ========================================================================== */
       header {
@@ -705,15 +787,29 @@
 
       /* Home
          ========================================================================== */
-
+      section {
+        h2 {
+          text-align: center;
+        }
+      }
       section.blockquote {
         padding: 250px 0;
         max-width: 800px;
+
+        h2 {
+          padding-bottom: 1em;
+        }
       }
 
-      section.square {
-        padding: 250px 0;
-        max-width: 600px;
+      section {
+        .square {
+            padding: 250px 0;
+            max-width: 600px;
+          }
+
+        h2 {
+          padding-bottom: 1em;
+        }
 
         h3 {
           overflow: hidden;
@@ -735,4 +831,27 @@
           font-size: 3.117rem;
           letter-spacing: 0.206rem;
         }
+      }
+
+      #products,
+      #newsletterSignUp,
+      #pressNews {
+        padding: 80px 0;
+      }
+
+      #about, #region {
+        background-color: #0c3520;
+        color: #ffffff;
+      }
+
+      #newsletterSignUp {
+        border-top: 1px solid #000000;
+
+        p {
+          text-align: center;
+        }
+      }
+
+      #pressNews {
+
       }
