add: careers page

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -599,6 +599,7 @@
 
      h1 {
         font-size: 1rem;
+        text-transform: uppercase;
      }
      h2, h3  {
         font-size: 0.647rem;
@@ -927,3 +928,6 @@
       #pressNews {
 
       }
+
+      /* Careers
+         ========================================================================== */
