--- a/css/styles.css
+++ b/css/styles.css
@@ -524,7 +524,8 @@ input[type=number]::-webkit-outer-spin-button {
 /* General
      ========================================================================== */
 h1 {
-  font-size: 1rem; }
+  font-size: 1rem;
+  text-transform: uppercase; }
 
 h2, h3 {
   font-size: 0.647rem; }
@@ -756,3 +757,6 @@ section h3 {
   border-top: 1px solid #000000; }
   #newsletterSignUp p {
     text-align: center; }
+
+/* Careers
+         ========================================================================== */
