--- a/css/styles.css
+++ b/css/styles.css
@@ -550,8 +550,9 @@ small, footer li, .small {
   overflow: hidden; }
 
 main {
-  min-height: calc(100vh - 141px - 83px);
-  padding-bottom: 100px; }
+  min-height: calc(100vh - 141px);
+  padding-bottom: 100px;
+  padding-top: 83px; }
 
 .row {
   display: flex;
@@ -667,7 +668,11 @@ main {
 header {
   font-size: 0.471rem;
   padding: 2em 0;
-  border-bottom: 1px solid #000000; }
+  border-bottom: 1px solid #000000;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0; }
 
 nav ul {
   font-family: 'Garamond Premr Pro';
