--- a/css/styles.scss
+++ b/css/styles.scss
@@ -626,8 +626,9 @@
     }
 
     main {
-      min-height: calc(100vh - 141px - 83px);
+      min-height: calc(100vh - 141px);
       padding-bottom: 100px;
+      padding-top: 83px;
       @media screen and (max-width: 800px) {
 
       }
@@ -791,6 +792,10 @@
         font-size: 0.471rem;
         padding: 2em 0;
         border-bottom: 1px solid #000000;
+        position: fixed;
+        width: 100%;
+        top: 0;
+        left: 0;
       }
       nav ul {
         font-family: 'Garamond Premr Pro';
