--- a/css/styles.scss
+++ b/css/styles.scss
@@ -69,6 +69,10 @@
       color: #ffffff;
       opacity: 1;
     }
+
+    &.scroll-pause {
+      overflow-y: hidden;
+    }
   }
 
   /**
@@ -132,7 +136,7 @@
    */
 
   figure {
-    margin: 1em 1vw;
+    margin-bottom: 1em;
   }
 
   /**
@@ -356,7 +360,7 @@
   html [type="button"], /* 1 */
   [type="reset"],
   [type="submit"] {
-    border: 2px solid #000000;
+    border: 1px solid #000000;
     -webkit-appearance: button; /* 2 */
     width: fit-content;
   }
@@ -526,7 +530,7 @@
     outline: none;
     box-shadow: none;
     border: none;
-    border-bottom: 2px solid #000000;
+    border-bottom: 1px solid #000000;
     border-radius: 0;
     width: 100%;
     // font-family: 'Neue Haas Grotesk 65', Fallback, sans-serif;
@@ -614,6 +618,7 @@
         font-size: 0.647rem;
      }
      h2 {
+       font-size: 1rem;
        text-transform: lowercase;
        font-variant-caps: small-caps;
        font-variant: small-caps;
@@ -730,6 +735,8 @@
       }
 
       .small-caps {
+        text-transform: lowercase;
+        font-variant-caps: small-caps;
         font-variant: small-caps;
       }
 
@@ -760,9 +767,7 @@
             }
             .small {
               font-family: 'Robinsons Gothic Regular';
-              text-transform: lowercase;
-              font-variant-caps: small-caps;
-              font-variant: small-caps;
+              text-transform: uppercase;
               text-align: center;
               letter-spacing: 0.1em;
             }
@@ -787,7 +792,7 @@
           }
 
           .column {
-            padding: 0.25em;
+            padding: 1em;
             padding-top: 50px;
 
             .title {
@@ -889,6 +894,7 @@
                   margin-bottom: 2em;
                 }
                 .title {
+                  font-size: 0.471rem;
                   letter-spacing: 0.12em;
                   text-transform: lowercase;
                   font-variant-caps: small-caps;
@@ -904,12 +910,11 @@
                  font-family: 'Garamond Premr Pro';
                  width: 100%;
                  margin-bottom: 5em;
-                 padding: 1.3125em;
+                 padding: 1.2125em;
                  text-transform: lowercase;
                  font-variant-caps: small-caps;
                  font-variant: small-caps;
                  cursor: pointer;
-                 font-size: 0.412rem;
                  letter-spacing: 0.12em;
 
                  &:hover,
@@ -1001,6 +1006,13 @@
 
       /* Home
          ========================================================================== */
+
+      .home {
+        h3.small-caps {
+          text-align: center;
+          padding-bottom: 1em;
+        }
+      }
       section {
         h2 {
           text-align: center;
