--- a/css/styles.scss
+++ b/css/styles.scss
@@ -978,13 +978,13 @@
               li {
                 flex: 0 0 auto;
                 &:nth-child(1) {
-                  margin-right: 12px;
+                  margin-right: 0.3em;
                 }
                 &:nth-child(2) {
                   margin: 0;
                 }
                 &:nth-child(3) {
-                  margin-left: 12px;;
+                  margin-left: 0.3em;
                 }
                 @media screen and (max-width: 800px) {
                   &:nth-child(1),
