wip: site repsonvie desktop sizing

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -16,6 +16,7 @@
      font-family: 'Garamond Premr Pro', Fallback, sans-serif;
      font-weight: 100;
      font-size: 34px;
+     // font-size: 2.65vw;
   }
   *, *::before, *::after {
     box-sizing: border-box;
